--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>RTSFX_revire_Home</title>
+    <title>RTSFX Review Home</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -8,12 +8,16 @@
     <style>
     div.container {
         border: 0px solid black;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: 25px;
+        margin-bottom: 25px;
         margin-right: 350px;
         margin-left: 350px;
         background-color: white;
       }
+      div.boxed {
+      border: 1px solid lightblue ; width: 5% ;
+      }
+        </style>
     </style>
   </head>
   <!--------------------------------------------------------------------------->
@@ -22,22 +26,52 @@
       &nbsp;
       <center>
         <font size="4">
+        <div class="boxed">
         <a
         href="index.html">
         Home</a>
-        &nbsp;
-        <a
-        href="allarms.html">
-        Allarms</a>
-        &nbsp;
-        <a
-        href="animals.html">
-        Animals</a>
-        &nbsp;
-      </font>
-    </center>
-    <hr></hr>
+      </div>
+      <div class="container">
+        <hr></hr>
+          <a
+          href="allarms.html">
+          Telephon Bell</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="mammals.html">
+          Mammals</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="birds.html">
+          Birds</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="rain.html">
+          Rain</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="bouble.html">
+          Bouble pour</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="fire.html">
+          Fire</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
+          href="combinations.html">
+          Combinations</a>
+          &nbsp;
+          <hr></hr>
+        </font>
+      </center>
     &nbsp;
+  </div>
   </header>
     <!--------------------------------------------------------------------------->
     <div>
@@ -69,3 +103,4 @@
       </a>
       </div>
     </body>
+    </html>
