added comments, added long call birds

--- a/allarms.html
+++ b/allarms.html
@@ -98,7 +98,7 @@
         <div class="container">
           <h3>
               <font size="3">
-                <p> Telephon Bell interface comments
+                <p> Interface comments
                 <br \ >
                   <ul>
                       <li>  Pedestrian Crossing is missing on the pop-up menu (once you are into a specific sound synthesis) </li>
@@ -115,19 +115,34 @@
       <h5>
         <font size="3">
           &nbsp;
-          <p> Telephon Bell model comments
+          <p> Model comments
           <br \ >
             <ul>
-                <li>  Timing issue: bells should be triggered much faster </li>
+                <li>  Timing issue: bells should be triggered much faster, triggering frequency should be between 8 and 10 Hz</li>
                 <li>	The synthesis in itself sounds good (the distribution and amplitude of partials of single bells are similar to selected sample) </li>
-                <li>	We are missing the timing, triggering frequency should be between 8 and 10 Hz </li>
-                <li>	We might need to add an impulsive noisy component to each bell sound (simulation of hammer beating the bell)? </li>
+                <li>	Add an impulsive noisy component to each bell sound (simulation of hammer beating the bell)? </li>
             </ul>
           </p>
         </font>
     </h5>
     <hr></hr>
   </div>
+  <div class="container">
+  <h5>
+    <font size="3">
+      &nbsp;
+      <p> Sound designers comments
+      <br \ >
+        <ul>
+            <li>  Not bad, but the bell type could have some more choices as it may pass for an older style phone bell, but not the more modern ones IMHO </li>
+            <li>	The presets were a little sluggish to operate (browser related maybe) </li>
+            <li>	The parameters only produce usable sounds in very specific sweet-spots </li>
+        </ul>
+      </p>
+    </font>
+</h5>
+<hr></hr>
+</div>
     &nbsp;
   <!--------------------------------------------------------------------------->
         <div class="container">
