--- a/mammals.html
+++ b/mammals.html
@@ -107,7 +107,7 @@
     <div class="container">
       <h3>
         <font size="3">
-            <p> Mammals interface comments
+            <p> Interface comments
             <br\>
               <ul>
                 <li> The taxonomy used for the sliders is a mix between perceptual and technical labels (e.g. Filter Q and Harshness) <br>
@@ -126,7 +126,7 @@
               </ul>
             </p>
             <hr></hr>
-            <p> Mammals model comments
+            <p> Model comments
               <br\>
               <ul>
                 <li> While playing the sounds artifacts are generated (clicks) </li>  <br>
@@ -137,6 +137,14 @@
                 <li> Increase the frequency range of the "low pass filter" in order to be able to decrease the energy in the lower frequency range  </li> <br>
                 <li> Note that the Growl samples often have the highest component disappering in the second half of the sound, this variation could be introduced for Growl sounds applying a highpass filter </li> <br>
                 <li> RTSFX sounds seems to lack brightness and noisyness. Add more frequency components to get noisy energy in the hihger frequency range </li> <br>
+              </ul>
+              <br>
+            </p>
+            <hr></hr>
+            <p> Sound designers comments
+              <br\>
+              <ul>
+                <li> Not good.	I could not find a single usable sound.</li>  <br>
               </ul>
               <br>
             </p>
